Fixed bug where members were not being updated when nothing else had changed in the group. Fixed a bug where clicking on a tab in the config screen jumped the scroll to the top of the page.

--- a/b2/src/main/webapp/css/default.css
+++ b/b2/src/main/webapp/css/default.css
@@ -8,6 +8,7 @@
     border: 1px solid #ccc;
     border-bottom: none;
     margin: 0;
+    cursor: pointer;
 }
 .deserialiserTab a {
     display: inline-block;
